# rust-template

./: .env  Cargo.toml  request.http
src/: main.rs
src/config/: database.rs  dotenv.rs  mod.rs  repository.rs  thread.rs  tracing.rs
src/config/cqrs/: command.rs  query.rs
src/config/models/: mod.rs
src/config/models/enums/: mod.rs
src/modules/health/: mod.rs  test.rs
src/modules/health/controllers/: health_check.rs  mod.rs
src/modules/health/models/: mod.rs
src/modules/health/services/: mod.rs  queries.rs
src/modules/shared/: mod.rs  model.rs  repository.rs
