[package]
name = "actix-api-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-web-actors = "4.0.0"
actix = "0.12.0"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-futures = "0.2"
num_cpus = "1.13.1"
cherry = { version = "0.2.2", features = ["mssql", "runtime-async-std-rustls"] }
cherry-derive = "0.2.2"

[dev-dependencies]
actix-rt = "2"
mockall = "0.11.0"
